# brainrot-generator

./: .gitignore  README.md  requirements.txt  run_web.py  setup.cfg  stories.txt
.cursor/rules/: project-structure-and-script-running.mdc
Reddit_Shorts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
reddit_shorts/: config.py  create_short.py  get_reddit_stories.py  main.py  make_submission_image.py  make_tts.py
web_ui/: __init__.py  routes.py
web_ui/static/: index.html
