[metadata]
name = tiktok-brainrot-generator
version = 0.2.0 # Initial version for your fork with significant changes
author = egebese
author_email = your_email@example.com # Optional: Add your email
description = Generates short videos from local text stories with TikTok TTS and customizable overlays.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    requests>=2
    # praw>=7 # Removed, no longer fetching from Reddit
    toml>=0.10
    python-dotenv>=1 # Keep for potential future use, though not strictly needed now
    ffmpeg-python>=0.2
    openai-whisper>=20231117
    pillow>=10
    # google-api-python-client>=2 # Removed, no YouTube upload
    # google-auth-oauthlib>=1 # Removed
    # google-auth-httplib2>=0.2 # Removed
    playsound@git+https://github.com/taconi/playsound # Keep for macOS compatibility
    gTTS>=2.2.3 # Keep, as the function still exists in make_tts.py
python_requires = >=3.11 # Updated to reflect recommendation

[options.packages.find]
exclude =
    test*
    testing*

[options.entry_points]
console_scripts =
    brainrot-gen = reddit_shorts.main:run # Changed script name

[options.extras_require]
testing =
    pytest>=6

[options.package_data]
# Ensure this matches the main package name if it changes, for now it's reddit_shorts
reddit_shorts = py.typed

[coverage:run]
plugins = covdefaults

[flake8]
max-line-length = 160 # Kept from original

